export const PRIMARY_TABS = [
  {
    name: 'room',
    title: 'Tonight',
    testID: 'tab-tonight',
    icon: 'moon-outline',
    selectedIcon: 'moon',
  },
  {
    name: 'messages',
    title: 'Messages',
    testID: 'tab-messages',
    icon: 'chatbubbles-outline',
    selectedIcon: 'chatbubbles',
  },
  {
    name: 'me',
    title: 'Me',
...
